--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>Gravium</title>
   <meta name="" content="">
   <meta name="" content="">
-
+  <link rel='icon' href='img/favicon-96x96.png' type='image/x-icon'/ >
   <link rel="stylesheet" href="styles.css">
 
 </head>
