--- a/index.html
+++ b/index.html
@@ -46,10 +46,11 @@
 		</ul>
 		
 		<hr>
+		<a target="_blank" href="https://unity3d.com/legal/privacy-policy"><p class="footer feature-text">Unity Privacy Policy</p></a>
 		
 		<p class="footer feature-text">Questions? Collaborations? Bugs? </p>
 		<p class="footer feature-text">nightskygravium@gmail.com</p>
-
+		
 		<p class="footer"></p>
 </body>
 </html>
