--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 		</ul>
 		
 		<hr>
-		<a target="_blank" href="https://unity3d.com/legal/privacy-policy"><p class="footer feature-text">Unity Privacy Policy</p></a>
+		<a class="link" target="_blank" href="https://unity3d.com/legal/privacy-policy"><p class="footer feature-text">Unity Privacy Policy</p></a>
 		
 		<p class="footer feature-text">Questions? Collaborations? Bugs? </p>
 		<p class="footer feature-text">nightskygravium@gmail.com</p>
