--- a/index.html
+++ b/index.html
@@ -1,19 +1,21 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" rel="stylesheet">
+
   <title>Gravium</title>
   <meta name="" content="">
   <meta name="" content="">
   <link rel='icon' href='img/favicon-96x96.png' type='image/x-icon'/ >
   <link rel="stylesheet" href="styles.css">
-
 </head>
 
 <body>
 	<div id="background"></div>
 
-	<div id="main">
+  <div id="scrollbarContainer">
+      <div id="scrollbar"></div>
+  </div>
+	 <div id="main">
 		<div id="feature"><img src="img/GraviumFeatureGraphic.png"></div>
 
 		<div id="badges">
@@ -40,17 +42,15 @@
 		<p class="body-text">Customize your experience by changing your character, mixing the sounds, and choosing light or dark mode.</p>
 
 		<ul class="body-text">
-			<li>Free-To-Play, with banner ads.</li>
+			<li> <a target="_blank" href="https://unity3d.com/legal/privacy-policy"> Free-To-Play, with banner ads. Unity Privacy Policy</p><img class="external-link-icon" src="img/external-link-alt-solid.svg"></img></a></li>
 			<li>In-App Purchase to remove banner ads.</li>
 			<li>When paused, you can edit the colors for any level.</li>
 		</ul>
-		
-		<hr>
-		<a class="link" target="_blank" href="https://unity3d.com/legal/privacy-policy"><p class="footer feature-text">Unity Privacy Policy</p></a>
-		
-		<p class="footer feature-text">Questions? Collaborations? Bugs? </p>
-		<p class="footer feature-text">nightskygravium@gmail.com</p>
-		
+
+		<p class="footer">Questions? Collaborations? Bugs? </p>
+		<p class="footer">nightskygravium@gmail.com</p>
+
 		<p class="footer"></p>
 </body>
+<script type="text/javascript" src="scrollbar.js"></script>
 </html>
