--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta name="" content="">
   <link rel='icon' href='img/favicon-96x96.png' type='image/x-icon'/ >
   <link rel="stylesheet" href="styles.css">
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" rel="stylesheet">
 </head>
 
 <body>
