--- a/privacypolicy.html
+++ b/privacypolicy.html
@@ -20,7 +20,8 @@
     <li>“I received an ad from Unity Ads, what should I know?"</li>
     <li>“Do I have any choices regarding the data collection described above if I do not wish to see personalized ads?”</li>
     <li>“What are device identifiers (like IDFA or fingerprints) and why do you collect them?”</li>
-</p>
+  </ul>
+  <p>Questions? Email the developer at nightskygravium@gmail.com</p>
 </body>
 <script type="text/javascript" src="scrollbar.js"></script>
 </html>
