--- a/index.html
+++ b/index.html
@@ -40,12 +40,12 @@
 
 		<hr>
 
-		<p class="body-text">Customize your experience by changing your character, mixing the sounds, and choosing light or dark mode.</p>
+		<p class="body-text">Customize your experience by changing your character, mixing the sounds, and choosing light or dark mode. When paused, you can edit the colors for any level.</p>
 
 		<ul class="body-text">
-			<li> <a target="_blank" href="https://unity3d.com/legal/privacy-policy"> Free-To-Play, with banner ads. Unity Privacy Policy</p><img class="external-link-icon" src="img/external-link-alt-solid.svg"></img></a></li>
-			<li>In-App Purchase to remove banner ads.</li>
-			<li>When paused, you can edit the colors for any level.</li>
+		  <li>Free-To-Play, with banner ads. Unity Privacy Policy</li>
+		  <li>In-App Purchase to remove banner ads.</li>
+		  <li><a target="_blank" href="https://unity3d.com/legal/privacy-policy">Privacy Policy<img class="external-link-icon" src="img/external-link-alt-solid.svg"></img></a></li>
 		</ul>
 
 		<p class="footer">Questions? Collaborations? Bugs? </p>
