--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 		<ul class="body-text">
 		  <li>Free-To-Play, with banner ads. Unity Privacy Policy</li>
 		  <li>In-App Purchase to remove banner ads.</li>
-		  <li><a target="_blank" href="https://unity3d.com/legal/privacy-policy">Privacy Policy<img class="external-link-icon" src="img/external-link-alt-solid.svg"></img></a></li>
+		  <li><a target="_blank" href="https://nightskygravium.github.io/privacypolicy.html">Privacy Policy<img class="external-link-icon" src="img/external-link-alt-solid.svg"></img></a></li>
 		</ul>
 
 		<p class="footer">Questions? Collaborations? Bugs? </p>
