--- a/privacypolicy.html
+++ b/privacypolicy.html
@@ -12,17 +12,17 @@
 
 <body>
 <div class="content">
-	<h1>Privacy Policy</h1>
-  <h2>Last Updated on June 30th, 2020</h2>
-  <p> Jared Keffer (“I”), the developer of the application (“Gravium”), respects the data and privacy of the user (“you” or “your”). Gravium, a mobile application for the iOS and Android platforms, utilizes a framework (“Unity”) that provides analytics, in-app purchases, and advertising. I do not collect or store your personal data. Unity Ads and Unity Analytics may collect data. To find out specifically what data Unity collects and uses, please read these sections of Unity’s Privacy Policy, in “1. Frequently Asked Questions (FAQs)”, which can be found at this URL: <a href="https://unity3d.com/legal/privacy-policy">https://unity3d.com/legal/privacy-policy</a>
-  <ul>
+	<h1 class="privacy-spacing">Privacy Policy</h1>
+  <h2 class="privacy-spacing">Last Updated on June 30th, 2020</h2>
+  <p class="privacy-spacing"> Jared Keffer (“I”), the developer of the application (“Gravium”), respects the data and privacy of the user (“you” or “your”). Gravium, a mobile application for the iOS and Android platforms, utilizes a framework (“Unity”) that provides analytics, in-app purchases, and advertising. I do not collect or store your personal data. Unity Ads and Unity Analytics may collect data. To find out specifically what data Unity collects and uses, please read these sections of Unity’s Privacy Policy, in “1. Frequently Asked Questions (FAQs)”, which can be found at this URL: <a href="https://unity3d.com/legal/privacy-policy">https://unity3d.com/legal/privacy-policy</a>
+  <ul class="privacy-spacing">
     <li>“I play a game built with Unity software, what should I know?”</li>
     <li>“I play a game that uses Unity Analytics, what should I know?”</li>
     <li>“I received an ad from Unity Ads, what should I know?"</li>
     <li>“Do I have any choices regarding the data collection described above if I do not wish to see personalized ads?”</li>
     <li>“What are device identifiers (like IDFA or fingerprints) and why do you collect them?”</li>
   </ul>
-  <p>Questions? Email the developer at nightskygravium@gmail.com</p>
+  <p class="privacy-spacing">Questions? Email the developer at nightskygravium@gmail.com</p>
 	</div>
 </body>
 <script type="text/javascript" src="scrollbar.js"></script>
