--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 		<p class="body-text">Customize your experience by changing your character, mixing the sounds, and choosing light or dark mode. When paused, you can edit the colors for any level.</p>
 
 		<ul class="body-text">
-		  <li>Free-To-Play, with banner ads. Unity Privacy Policy</li>
+		  <li>Free-To-Play, with banner ads.</li>
 		  <li>In-App Purchase to remove banner ads.</li>
 		  <li><a target="_blank" href="https://nightskygravium.github.io/privacypolicy.html">Privacy Policy<img class="external-link-icon" src="img/external-link-alt-solid.svg"></img></a></li>
 		</ul>
