--- a/privacypolicy.html
+++ b/privacypolicy.html
@@ -15,10 +15,11 @@
       <div id="scrollbar"></div>
   </div>
 <div class="content">
-	<h1 class="privacy-spacing">Privacy Policy</h1>
+  <h1 class="privacy-spacing">Privacy Policy</h1>
   <h2 class="privacy-spacing">Last Updated on June 30th, 2020</h2>
   <p class="privacy-spacing">Jared Keffer (“I”), the developer of the application (“Gravium”), respects the data and privacy of the user (“you” or “your”). Gravium, a mobile application for the iOS and Android platforms, utilizes a framework (“Unity”) that provides analytics, in-app purchases, and advertising. </p>
-  <p class="privacy-spacing">I do not collect or store your personal data. Unity Ads and Unity Analytics may collect data. To find out specifically what data Unity collects and uses, please read these sections of Unity’s Privacy Policy, in “1. Frequently Asked Questions (FAQs)”, which can be found at this URL: <a target="_blank" href="https://unity3d.com/legal/privacy-policy">https://unity3d.com/legal/privacy-policy</a>
+  <p class="privacy-spacing">I do not collect or store your personal data. Unity Ads and Unity Analytics may collect data. Unity's Privacy Policy is located at this URL: <a target="_blank" href="https://unity3d.com/legal/privacy-policy">https://unity3d.com/legal/privacy-policy</a></p>
+  <p class="privacy-spacing">To find out specifically what data Unity collects and uses, please read these sections of Unity’s Privacy Policy under “1. Frequently Asked Questions (FAQs)”:</p>
   <ul class="privacy-spacing">
     <li>“I play a game built with Unity software, what should I know?”</li>
     <li>“I play a game that uses Unity Analytics, what should I know?”</li>
@@ -27,7 +28,7 @@
     <li>“What are device identifiers (like IDFA or fingerprints) and why do you collect them?”</li>
   </ul>
   <p class="privacy-spacing">Questions? Email the developer at nightskygravium@gmail.com</p>
-	</div>
+</div>
 </body>
 <script type="text/javascript" src="scrollbar.js"></script>
 </html>
