--- a/privacypolicy.html
+++ b/privacypolicy.html
@@ -15,8 +15,8 @@
       <div id="scrollbar"></div>
   </div>
 <div class="content">
-  <h1 class="privacy-spacing">Privacy Policy</h1>
-  <h2 class="privacy-spacing">Last Updated on June 30th, 2020</h2>
+  <h1>Privacy Policy</h1>
+  <h2>Last Updated on June 30th, 2020</h2>
   <p class="privacy-spacing">Jared Keffer (“I”), the developer of the application (“Gravium”), respects the data and privacy of the user (“you” or “your”). Gravium, a mobile application for the iOS and Android platforms, utilizes a framework (“Unity”) that provides analytics, in-app purchases, and advertising. </p>
   <p class="privacy-spacing">I do not collect or store your personal data. Unity Ads and Unity Analytics may collect data. Unity's Privacy Policy is located at this URL: <a target="_blank" href="https://unity3d.com/legal/privacy-policy">https://unity3d.com/legal/privacy-policy</a></p>
   <p class="privacy-spacing">To find out specifically what data Unity collects and uses, please read these sections of Unity’s Privacy Policy under “1. Frequently Asked Questions (FAQs)”:</p>
