--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 		<div id="feature"><img src="img/GraviumFeatureGraphic.png"></div>
 
 		<div id="badges">
-			<a target=”_blank” href=""><img id="apple-badge" src="img/Download_on_the_App_Store_Badge_US-UK_RGB_blk_092917.svg"></a>
-			<a target=”_blank” href=""><img id="google-badge" src="img/google-play-badge.png"></a>
+			<a target=”_blank” href="https://apps.apple.com/us/app/id1510169321"><img id="apple-badge" src="img/Download_on_the_App_Store_Badge_US-UK_RGB_blk_092917.svg"></a>
+			<a target=”_blank” href="https://play.google.com/store/apps/details?id=com.NightSky.Attract"><img id="google-badge" src="img/google-play-badge.png"></a>
 		</div>
 	<div class="content">
 		<p class="body-text">Move through space in a whole new way! Easy to learn, hard to master.
